<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="32dp"
    android:fitsSystemWindows="true"
    tools:context="com.acm.concert.ConcertLoginActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/userEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/netid"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="NetID" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userEdit"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:met_floatingLabel="highlight" />

    <CheckBox
        android:id="@+id/rememberBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/passwordEdit"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/remember_login" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rememberBox"
        android:layout_marginTop="8dp"
        android:text="@string/login_view" />

</RelativeLayout>
